--- a/templates/layout.html
+++ b/templates/layout.html
@@ -24,9 +24,11 @@
             <a href="/sell" class="text-slate-200">Sell</a>
             <a href="/buy" class="text-slate-200">Buy</a>
             <a href="/history" class="text-slate-200">History</a>
-            <div class="flex gap-4 text-white">
-                <img src="../assets/icons/user.svg" alt="user">
-                <a href="/profile">Edit Profile</a>
+            <div class="flex gap-4 text-white items-center">
+                <a href="/profile" class="flex items-center">
+                    <img src="../assets/icons/user.svg" alt="user">
+                    <p>Edit Profile</p>
+                </a>
                 <a href="/logout">Log Out</a>
             </div>
             <script>
