--- a/templates/sell.html
+++ b/templates/sell.html
@@ -5,8 +5,9 @@ Sell
 {% endblock %}
 
 {% block main %}
-<div class="w-full flex flex-col items-center gap-10">
+<div class="w-full flex flex-col items-center gap-10 p-2 absolute">
     <p class="text-center font-bold text-xl">Sell Shares</p>
+    <a href="/" class="absolute left-10 top-10"><img src="../assets/icons/back.svg" alt="back"></a>
     <form action="/sell" method="post" class="flex flex-col justify-center items-center gap-10 w-2/3">
         <div class="w-full">
             <label for="company_name" class="block text-slate-500 mb-2">Company</label>
