--- a/templates/buy.html
+++ b/templates/buy.html
@@ -5,8 +5,9 @@ Buy
 {% endblock %}
 
 {% block main %}
-<div class="w-full flex flex-col items-center gap-10">
+<div class="w-full flex flex-col items-center gap-10 p-2 relative">
     <p class="text-center font-bold text-xl">Buy Shares</p>
+    <a href="/" class="absolute left-10 top-10"><img src="../assets/icons/back.svg" alt="back"></a>
     <form class="flex flex-col justify-center items-center gap-10 w-2/3" id="quoteForm">
         <div class="w-full relative">
             <label for="company_name" class="block text-slate-500 mb-2">Company</label>
