input type typo

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -18,7 +18,7 @@ Profile
             </div>
             <div>
                 <label for="old_password" class="block text-slate-500">Old Password</label>
-                <input type="old_password" name="old_password" id="old_password" placeholder="Enter password"
+                <input type="password" name="old_password" id="old_password" placeholder="Enter password"
                     autocomplete="off"
                     class="bg-slate-200 outline-none p-2 border border-purple-600 rounded-lg focus:border-2 focus:border-purple-800 focus:bg-slate-300 w-full"
                     required>
