--- a/templates/layout.html
+++ b/templates/layout.html
@@ -34,7 +34,7 @@
             <script>
                 let names;
                 async function getNames() {
-                    names = await fetch('/companies');
+                    names = await fetch('/data/companies');
                     names = await names.json();
                 }
                 getNames();
