--- a/templates/register.html
+++ b/templates/register.html
@@ -5,7 +5,7 @@ Register
 {% endblock %}
 
 {% block main %}
-<form action="/register" method="post" class="flex items-center justify-center p-12">
+<form class="flex items-center justify-center p-12">
     <div class="border border-green-300 p-8 rounded-2xl flex flex-col gap-8 w-3/4 sm:w-1/3">
         <div>
             <p class="text-black font-bold text-xl text-center">Register for an account</p>
@@ -13,42 +13,69 @@ Register
         <div>
             <label for="username" class="block text-slate-500">Username</label>
             <input type="text" name="username" id="username" placeholder="Enter your username"
-                class="bg-slate-200 outline-none p-2 border border-purple-600 rounded-lg focus:border-2 focus:border-purple-800 focus:bg-slate-300 w-full"
-                required pattern="^[a-zA-Z][a-z_A-Z0-9]{3,}$">
+                class="bg-slate-200 outline-none p-2 border border-purple-600 rounded-lg focus:border-2 focus:border-purple-800 focus:bg-slate-300 w-full">
         </div>
         <div>
             <label for="password" class="block text-slate-500">Password</label>
             <input type="password" name="password" id="password" placeholder="Enter password"
-                class="bg-slate-200 outline-none p-2 border border-purple-600 rounded-lg focus:border-2 focus:border-purple-800 focus:bg-slate-300 w-full"
-                required>
+                class="bg-slate-200 outline-none p-2 border border-purple-600 rounded-lg focus:border-2 focus:border-purple-800 focus:bg-slate-300 w-full">
         </div>
         <div>
             <label for="confirm_password" class="block text-slate-500">Confirm password</label>
             <input type="password" name="confirm_password" id="confirm_password" placeholder="Confirm password"
-                class="bg-slate-200 outline-none p-2 border border-purple-600 rounded-lg focus:border-2 focus:border-purple-800 focus:bg-slate-300 w-full"
-                required>
+                class="bg-slate-200 outline-none p-2 border border-purple-600 rounded-lg focus:border-2 focus:border-purple-800 focus:bg-slate-300 w-full">
+            <p id="displayError" class="hidden"></p>
         </div>
         <div class="flex items-center justify-center">
-            <button type="submit"
+            <button type="button" id="submitButton"
                 class="bg-purple-900 font-bold text-xl text-white p-2 px-12 rounded-2xl">Register</button>
         </div>
         <div>
             <p>Already have an account? <a href="/login" class="text-purple-800 underline font-bold">Login</a></p>
         </div>
         <script>
+            const username = document.querySelector("#username");
             const password = document.querySelector("#password");
             const confirm_password = document.querySelector("#confirm_password");
+            const submitButton = document.querySelector("#submitButton");
+            const displayError = document.querySelector("#displayError");
+            const usernamePattern = /^[a-zA-Z][a-z_A-Z0-9]{3,}$/;
+            const passwordPattern = /^.{6,}$/;
 
-            function validatePassword() {
-                if (password.value !== confirm_password.value) {
-                    confirm_password.setCustomValidity("Passwords Don't Match");
-                } else {
-                    confirm_password.setCustomValidity('');
+            async function register() {
+                let url = `/register/${username.value}/${password.value}/${confirm_password.value}`;
+                let response = await fetch(url);
+                let result = await response.json();
+                if (result.flag === "error") {
+                    displayError.textContent = 'Username already exists';
+                    displayError.classList.remove("hidden");
+                } else if (result.flag === "success") {
+                    window.location.href = "/";
                 }
             }
 
-            password.onchange = validatePassword;
-            confirm_password.onkeyup = validatePassword;
+            function validateForm() {
+                if (username.value === "" || password.value === "") {
+                    displayError.textContent = 'Username and password cannot be empty';
+                    displayError.classList.remove("hidden");
+                } else if (!usernamePattern.test(username.value)) {
+                    displayError.textContent = 'Username should be at least 4 characters long and start with a letter';
+                    displayError.classList.remove("hidden");
+                } else if (password.value !== confirm_password.value) {
+                    displayError.textContent = 'Passwords do not match';
+                    displayError.classList.remove("hidden");
+                } else if (!passwordPattern.test(password.value)) {
+                    displayError.textContent = 'Password should be at least 6 characters long';
+                    displayError.classList.remove("hidden");
+                } else {
+                    register();
+                }
+            }
+
+            submitButton.addEventListener("click", () => {
+                displayError.classList.add("hidden");
+                validateForm();
+            });
         </script>
     </div>
 </form>
