--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -5,7 +5,7 @@ Home
 {% endblock %}
 
 {% block main %}
-<div class="w-3/4 p-4 p-10 flex flex-col w-full gap-10">
+<div class="p-10 flex flex-col w-full gap-10">
     <div class="flex justify-around items-center text-black">
         <div>
             <p class="underline text-xl">Cash Total</p>
