match backend api format

--- a/templates/login.html
+++ b/templates/login.html
@@ -38,7 +38,7 @@ Log In
         const passwordPattern = /^\S{6,}$/;
 
         async function login() {
-            let url = `/login/authenticate?username=${username.value}&password=${password.value}`;
+            let url = `/api/login/authenticate?username=${username.value}&password=${password.value}`;
             let response = await fetch(url);
             let result = await response.json();
             if (result.flag === "error") {
